@@ -1,10 +1,11 @@
 package me.marin.lockout.lockout.interfaces;
 
 import me.marin.lockout.lockout.Goal;
+import net.minecraft.component.type.PotionContentsComponent;
 import net.minecraft.item.ItemStack;
 import net.minecraft.item.Items;
 import net.minecraft.potion.Potion;
-import net.minecraft.potion.PotionUtil;
+import net.minecraft.registry.entry.RegistryEntry;
 
 import java.util.List;
 
@@ -13,12 +14,10 @@ public abstract class ObtainPotionItemGoal extends Goal {
     private final ItemStack ITEM;
     public ObtainPotionItemGoal(String id, String data) {
         super(id, data);
-        ItemStack item = Items.POTION.getDefaultStack();
-        PotionUtil.setPotion(item, getPotions().get(0));
-        ITEM = item;
+        ITEM = PotionContentsComponent.createStack(Items.POTION, getPotions().getFirst());
     }
 
-    public abstract List<Potion> getPotions();
+    public abstract List<RegistryEntry<Potion>> getPotions();
 
     @Override
     public ItemStack getTextureItemStack() {
